2006-07-22  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.12.1 ===

	* glib/gconvert.c: Fix the prototype of _g_charset_get_aliases.
	(#346494, Thomas Klausner)

	* NEWS: Updates

2006-07-21  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gmirroringtable.h: Updated to Unicode Character Database 5.0.0.

2006-07-20  Matthias Clasen  <mclasen@redhat.com>

	* glib/guniprop.c (real_toupper, real_tolower): Small optimization.
	(#348011, Nikolai Weibull)

2006-07-19  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gunibreak.h:
	* glib/gunichartables.h:
	* glib/gunicomp.h:
	* glib/gunidecomp.h:
	Update to final Unicode Character Database 5.0.0. (#336281)

2006-07-06  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gutils.c (g_parse_debug_string): When matching debug flag keys, 
	ignore case and accept any of comma, colon, semicolon, space, and tab
	as separators.  Also, match dash with underscore.

2006-07-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/gbase64.c: Fix typos in the docs.  (#346660, Mark
	Drago)

2006-07-03  Runa Bhattacharjee <runabh@gmail.com>

	* configure.in: Added Bengali India (bn_IN) in ALL_LINGUAS.

2006-07-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.12.0 ===

2006-06-30  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* configure.in: Set version to 2.12.0

2006-06-20  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtimer.c (mktime_utc): Fix an off-by-2 error
	in the leap year calculation.  (#344905, Dan Winship)

	* tests/testglib.c (main): Change the test data for
	the g_time_val_from_iso8601 tests to expose an off-by-2
	error in the leap year calculation.

	* configure.in: Bump version

	* === Released 2.11.4 ===

	* NEWS: Updates

2006-06-16  Matthias Clasen  <mclasen@redhat.com>

	* tests/file-test.c (test_mkstemp): Add tests.

	* glib/gfileutils.c (g_mkstemp): Allow the XXXXXX to occur
	inside the template, not just at the end.  
